--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.5/css/bootstrap.css"> -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
