remove loading from app-root

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
